EFT section with Steve, Steven and Caterina's edits
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@317 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -5,22 +5,28 @@
 {$LastChangedBy: doglioni $}
 \svnid{$Id: $}
 
-Points to be made in a conclusion\Todo{write the conclusion}:
-\begin{itemize}
+%Points to be developed further:
+%\begin{itemize}
+%
+%\item In the case of s-channel simplified models, in particular, there is complementarity between searches for dark matter and visible particles.   Thus, limits on invisible decays must be consistent with dijet and dilepton searches.  In the case of the mono-top simplified model, limits on visible single-top final states must be considered.
+%
+%\item There are many implicit assumptions that have not been laid out entirely in our presentation.   As stated earlier, the term \textit{dark matter} in this report refers to a putative dark matter candidate.
+%  The details of a particular mono-X analysis rely on the fact that a
+%  WIMP exists, and that it is collider-stable.   The observation of a
+%  signal consistent with WIMP production does can only provide indirect or confirming evidence of a dark matter particle.
+%
+%\item The presentation of results comparing different experimental frontiers has to be done carefully and clearly.  We see the need for broader discussions on this topic.
+%
+%\item The experiments should aim to present limits on production cross sections corrected for acceptance when this is viable.  
+%
+%\item The Appendix contains a presentation of some models that came out in our discussions that were not deemed a priority for early Run2 analyses.  However, these should be considered in the future.
+%\end{itemize}
 
-\item In the case of s-channel simplified models, in particular, there is complementarity between searches for dark matter and visible particles.   Thus, limits on invisible decays must be consistent with dijet and dilepton searches.  In the case of the mono-top simplified model, limits on visible single-top final states must be considered.
-
-\item There are many implicit assumptions that have not been laid out entirely in our presentation.   As stated earlier, the term \textit{dark matter} in this report refers to a putative dark matter candidate.
-  The details of a particular mono-X analysis rely on the fact that a
-  WIMP exists, and that it is collider-stable.   The observation of a
-  signal consistent with WIMP production does can only provide indirect or confirming evidence of a dark matter particle.
-
-\item The presentation of results comparing different experimental frontiers has to be done carefully and clearly.  We see the need for broader discussions on this topic.
-
-\item The experiments should aim to present limits on production cross sections corrected for acceptance when this is viable.  
-
-\item The Appendix contains a presentation of some models that came out in our discussions that were not deemed a priority for early Run2 analyses.  However, these should be considered in the future.
+The conclusions will contain a summary of the recommendation from the ATLAS/CMS DM Forum report, 
+together with the summary table below. 
 
 \input{tex/SummaryTable.tex}
 
-\end{itemize}
+They will also include a series of points to be developed further beyond the timescale of the Forum. These points will be 
+discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 10th. 
+
