--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -1,4 +1,4 @@
-\clearpage 
+%\clearpage 
 
 \begin{footnotesize}
  
@@ -25,12 +25,19 @@
 	Signature & State of the art calculation & Link to implementation & References \\ 
 		\cmidrule(r){1-4} 
 		
-	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} & Ref \\ 
+	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} &  \cite{Haisch:2013ata,Alioli:2010xd,Nason:2004rx,Frixione:2007vw,Haisch:2015ioa} \\ 
 	& NLO (\mcfm) & TBC & \cite{Fox:2012ru} \\ 
 	& NLO+PS (\madgraph, v2.3.0) & TBC & \cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} \\ 		
 	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & TBC  & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} \\ 
     $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & TBC & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}\\ 
-    
+    & NLO+PS (\powheg, r3059) & TBC & \cite{Haisch:2013ata,Alioli:2010xd,Nason:2004rx,Frixione:2007vw,Haisch:2015ioa} \\ 
+%    DMS contains S and P mediators that couple to the quark in a Yukawa-like way (at NLO). 
+%    Since top quarks are not present in the proton, here the processes that dominate at tree-level are
+%    b bbar -> chi chibar g (via S or P)
+%    g b -> chi chibar b (via S or P)
+%    and also bottom <-> charm processes.
+%    Since the b and c yukawa are very small, cross sections here are extremelly small, and hence this process is less interesting than DMS_tloop in the monojet context.
+
 	\cmidrule(r){2-4} 
 	\multicolumn{4}{c}{scalar mediator, \tchannel}\\
 	\cmidrule(r){2-4} 
