--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2273,3 +2273,41 @@
 	SLACcitation   = "%%CITATION = ARXIV:1108.2040;%%",
 }
 
+
+@article{Nussinov:1985xr,
+	author         = "Nussinov, S.",
+	title          = "{TECHNOCOSMOLOGY: COULD A TECHNIBARYON EXCESS PROVIDE A
+	'NATURAL' MISSING MASS CANDIDATE?}",
+	journal        = "Phys.Lett.",
+	volume         = "B165",
+	pages          = "55",
+	doi            = "10.1016/0370-2693(85)90689-6",
+	year           = "1985",
+	reportNumber   = "CLNS-85/703",
+	SLACcitation   = "%%CITATION = PHLTA,B165,55;%%",
+}
+
+@article{Kaplan:1991ah,
+	author         = "Kaplan, David B.",
+	title          = "{A Single explanation for both the baryon and dark matter
+	densities}",
+	journal        = "Phys.Rev.Lett.",
+	volume         = "68",
+	pages          = "741-743",
+	doi            = "10.1103/PhysRevLett.68.741",
+	year           = "1992",
+	reportNumber   = "UCSD-PTH-91-22",
+	SLACcitation   = "%%CITATION = PRLTA,68,741;%%",
+}
+
+@article{Banks:2010eh,
+	author         = "Banks, Tom and Fortin, Jean-Francois and Thomas, Scott",
+	title          = "{Direct Detection of Dark Matter Electromagnetic Dipole
+	Moments}",
+	year           = "2010",
+	eprint         = "1007.5515",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "RUNHETC-2010-19, SCIPP-10-14, UCSD-PTH-10-06",
+	SLACcitation   = "%%CITATION = ARXIV:1007.5515;%%",
+}
