--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -11,67 +11,75 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Most of this report has focused on simplified models.
-Here, we wish to emphasize the utility and applicability of
+In this Chapter, we wish to emphasize the applicability of
 Effective Field Theories (EFTs) 
 in the interpretation of DM searches at the LHC.
 Given our current lack of knowledge about the nature of a DM particle and
-its interactions, a model independent interpretation of the collider bounds
-appears mandatory. This approach should be complemented with
-an interpretation within a choice of simplified models, which however
-cannot exhaust the set of possible completions of
-an effective Lagrangian. 
-Even though the EFT requires an assessment of the conditions that define its applicability, 
-results provided using of a single simplified model at a time do not
-characterize the full breadth of an EFT that can represent results for many completions at once.  
-In some cases, such as composite WIMPs~\cite{}, 
-\Todo{CD: Asked Tim for reference}
-the contact interaction framework is the correct one to constrain new confinement scales. 
+its interactions, it appears mandatory to provide the necessary information
+for a model independent interpretation of the collider bounds.
+This approach should be complemented with
+an interpretation within a choice of simplified models.
+We note that, even though EFT benchmarks are only valid in given conditions,
+the results provided by the current list of simplified models cannot always
+characterize the breadth of SM-DM interactions.
+In at least one case, composite WIMPs~\cite{Nussinov:1985xr,Kaplan:1991ah,Banks:2010eh}, 
+the contact interaction framework is the correct one to
+constrain new confinement scales. 
 
 %Even when the application of EFT is not appropriate for the prediction of kinematics 
 %or cross sections, it does predict specific final states and can motivate experimental searches.
 
-One problem that has arisen is the attempt to derive a limit on
-nucleon-dark matter scattering cross sections based on collider data.
+A problematic situation is the attempt to derive a limit on
+nucleon-dark matter scattering cross sections from EFT results
+based on collider data.
 Experiments that directly probe the nucleon-dark matter scattering cross section 
 are testing the regime of small momentum transfers, where the EFT approximation always holds.  
-Collider experiments are sensitive to large momentum transfers: This is a regime where careful 
+Collider experiments, though, are sensitive to large momentum transfers: this is a regime where careful 
 treatment is necessary since the condition of applicability of the EFT may not hold~\footnote{
 Furthermore, mapping EFT results from high to low momentum requires particular care for some of the operators, 
-see Ref.~\ref{D'Eramo:2014aba} for a thorough discussion.}.
+see Ref.~\ref{D'Eramo:2014aba} for a thorough discussion.}
+The correct approach is to assess the applicability of EFT, not abandon it.
 
 %As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
 Ideally, experimental constraints should be shown as bounds of allowed signal events in the kinematic regions considered for 
 the search, as detailed in Appendix~\ref{app:Presentation_Of_Experimental_Results}. 
-Constraints comparing different experiments should be expressed as a function of the model parameters 
-rather than on related observables, where the complementarity still be manifest, although this is a point
+Comparisons between constraints from different experiments meant to highlight their complementarity should be expressed as 
+a function of the model parameters rather than on derived observables;
+however this is a point
 that should be developed further after the conclusion of the work of this Forum. 
-Analyses should do this systematically; until that is done, results can be presented using one 
-of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}. 
-that can be used to quote bounds on EFT operators. 
+Until the various communities have agreed upon how to present this comparison, 
+collider results using contact interaction operators can be presented using one 
+of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}
+that can be used to quote bounds on EFTs. 
 
 We first illustrate the problem that can arise with EFTs at colliders by considering an effective interaction
-$$ (\bar\psi\psi)(\bar\chiDM\chiDM) {g\over \Lambda^2}$$
-that couples SM $\Psi$ and DM $\chi$ fields.   The strength of this interaction can
-be parametrized by $\displaystyle f={g\over \Lambda^2}$.
-A monojet signature can be generated
+$$ {\cal L}_\textrm{int} = (\bar\psi\gamma_\mu\psi)(\bar\chiDM\gamma^\mu\chiDM) {g\over \Lambda^2}$$
+that couples SM $\psi$ and DM $\chi$ fields.\footnote{The \textit{exact} operator chosen is not important.}   The strength of this interaction can
+be parametrized by $\displaystyle {1\over \Mstar^2} = {g\over \Lambda^2}$.
+A monojet signature can be generated from this operator
 by applying perturbation theory in the QCD coupling (assuming $\psi$ is
 a quark, for example).
-An experimental search will place a limit on $f$.   
-For a fixed $f$, a small value of $g$ will correspond
+An experimental search will place a limit on \Mstar.   
+For a fixed \Mstar, a small value of $g$ will correspond
 to a small value of $\Lambda$.   The EFT approximation breaks down
 if $Q>\Lambda$, where $Q$ is a typical hard scale of the process.
 %One possible example is $\Qtr^2=[p(\bar\chiDM\chiDM)]^2$, i.e.
 %the momentum flow through
 %the \schannel.% asked by Davide to remove this as its not correct.
-Thus the limit on small $g$ can only be reliable if the
-kinematic region $Q>\Lambda$ is removed from the prediction.
-On the other hand, if, for the same value of $f$, a large $\Lambda$
-is assumed so that the full kinematic region can be used, a large value of
+The limit on small $g$ can only be reliable if the
+kinematic region $Q>\Lambda$ is removed from the event generation.
+However, if a fraction of events is removed from the prediction,
+the corresponding value of $g$ must increase.
+On the other hand, if, for the same value of \Mstar, a large $\Lambda$
+is assumed so that the full set of events fulfill the EFT validity condition,
+a large value of
 $g$ is required, raising the question if perturbation theory
 is even applicable.     
 
-In the first part of this Section, we summarize two methods that can be used to truncate events that 
-do not fulfill the condition necessary for the use of an EFT.% and improve the reliability of the approximation by delivering conservative results. 
+In the first part of this Chapter, we summarize two methods that
+have been advocated to truncate events that 
+do not fulfill the condition necessary for the use of an EFT.
+% and improve the reliability of the approximation by delivering conservative results. 
 These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa,Berlin:2014cfa}. 
 We then propose a recommendation for the presentation of EFT results for early Run-2 LHC searches.
 
@@ -85,32 +93,49 @@ We then propose a recommendation for the presentation of EFT results for early R
 \label{sec:TruncationWithQTr}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-A standard approach has been to consider a simplified model and use the connection that the model provides between
-mediator mass and scale of the interaction to determine the reliability of the EFT approximation.
-For a tree-level interaction between DM and the Standard Model (SM) via some mediator with mass \mMed, 
-the EFT approximation corresponds to expanding the propagator for the mediator
-in powers of $\Qtr^2/\mMed^2$, truncating at lowest order, and combining the remaining parameters into a single parameter \Mstar (also called $\Lambda$ in the literature).
-For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the EFT limit)
+%The approach described in Refs.~\cite{Busoni:2014sya,Aad:2015zva} 
+%predates the implementation of simplified models, 
+%and can be viewed as a stop-gap measure until the simplified models could be fully simulated.
+%CD: I am not sure of this sentence, because the simplified models were there but we were just not using them. 
+In the approach described in Ref.~\cite{Busoni:2014sya},
+the main modification to the EFT prediction is to incorporate the
+propagator of a relatively light mediator.
+For a tree-level interaction between DM and
+the SM via some mediator with mass \mMed, 
+the EFT approximation corresponds to expanding the propagator
+for the mediator
+in powers of $\Qtr^2/\mMed^2$, truncating at lowest order, and combining the remaining parameters into a single parameter \Mstar 
+(connected to the scale of the interaction $\Lambda$ in the literature).
+For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the notation of~\ref{Goodman:2010ku} for the EFT limit),
 this corresponds to setting
  
 \be
-\frac{\gDM \gq}{Q_{\rm tr}^2-M^2}=-\frac{\gDM \gq}{M^2}\left(1+\frac{Q^2_{\rm tr}}{M^2}+ \mathcal{O} \left(\frac{Q^4_{\rm tr}}{M^4}\right)\right) \simeq -\frac{1}{{\Mstar}^2},
+\frac{\gDM \gq}{Q_{\rm tr}^2-\mMed^2}=-\frac{\gDM \gq}{\mMed^2}\left(1+\frac{Q^2_{\rm tr}}{\mMed^2}+ \mathcal{O} \left(\frac{Q^4_{\rm tr}}{\mMed^4}\right)\right) \simeq -\frac{1}{{\Mstar^2}},
 \ee
 %
-where $\Qtr$ is the momentum carried by the mediator, and $\gDM$, $\gq$ are the DM-mediator and quark-mediator couplings respectively. Similar expressions exist for other operators. The condition that must be satisfied for this approximation to be valid is that $\Qtr^2 < M^2 = \gDM \gq {\Mstar}^2$. 
-In this framework, there are three regions to consider:
-\begin{itemize}
-\item $\Qtr^2 \sim M^2$, in which case the EFT misses a resonant enhancement, and it is conservative to ignore this enhancement;
-\item $\Qtr^2 \ll M^2$, in which case the EFT is a good approximation; and
-\item $\Qtr^2 \gg M^2$, in which case the signal cross section should fall according to a power of $\Qtr^{-1}$ instead of $M^{-1}$.   This is the problematic kinematic region.
-\end{itemize}
+where $\Qtr$ is the momentum carried by the mediator, and $\gDM$,
+$\gq$ are the DM-mediator and quark-mediator couplings
+respectively.\footnote{Here, we ignore potential complications from
+the mediator width when the couplings are large.}
+%Similar expressions exist for other operators.
+A minimal condition that must be satisfied for this approximation to be valid is that $\Qtr^2 < \mMed^2 = \gDM \gq {\Mstar^2}$.
+This requirement avoids the regions:
+$\Qtr^2 \sim \mMed^2$, in which case the EFT misses a resonant enhancement, and it is conservative to ignore this enhancement;
+and $\Qtr^2 \gg \mMed^2$, in which case the signal cross section
+should fall according to a power of $\Qtr^{-1}$ instead of $\mMed^{-1}$.   The latter is the problematic kinematic region.
 
-We can use the condition $\Qtr^2 < M^2 = \gDM \gq {\Mstar}^2$ to restrict the
+The condition $\Qtr^2 < \mMed^2 = \gDM \gq \Mstar^2$ was applied
+to restrict the
 kinematics of the signal and remove events for which the high-mediator-mass approximation made in the EFT would not be reliable.
-This leads to a smaller effective cross-section, after imposing the event selection of the analysis.  This truncated signal can then be used to derive a new, more conservative limit on $\Mstar$ as a function of $(\mDM, \gDM \gq)$.
+This leads to a smaller effective cross-section, after imposing the event selection of the analysis.  This truncated signal was then used
+to derive a new, more conservative limit on
+$\Mstar$ as a function of $(\mDM, \gDM \gq)$.
 %TODO SM: I am uncomfortable with saying ``ensure the validity.'' CD: me too. However "improve the reliability of the validity" is cumbersome so I changed it.
 
-For the example D5-like operator, $\sigma \propto {\Mstar}^{-4}$, and so there is a simple rule for converting a rescaled cross section into a rescaled constraint on ${\Mstar}$ if the original limit is based on a simple cut-and-count procedure. Defining $\sigma_{\rm EFT}^{\rm cut}$ as the cross section truncated such that all events pass the condition $\sqrt{\gDM \gq} \Mstar^{\rm rescaled} > \Qtr$, we have
+For the example D5-like operator, $\sigma \propto \Mstar^{-4}$, and there is a simple rule for converting a rescaled cross section into a rescaled constraint on ${\Mstar}$.
+if the original limit is based on a simple cut-and-count procedure.
+%CD: I would keep it
+Defining $\sigma_{\rm EFT}^{\rm cut}$ as the cross section truncated such that all events pass the condition $\sqrt{\gDM \gq} \Mstar^{\rm rescaled} > \Qtr$, we have
  
 \be
 \Mstar^{\rm rescaled} = \left(\frac{\sigma_{\rm EFT}}{\sigma_{\rm EFT}^{\rm cut}(\Mstar^{\rm rescaled})}\right)^{1/4} \Mstar^{\rm original},
@@ -118,7 +143,12 @@ For the example D5-like operator, $\sigma \propto {\Mstar}^{-4}$, and so there i
 %
 which can be solved for $\Mstar^{\rm rescaled}$ via either iteration or a scan.
 %(note that $\Mstar^{\rm rescaled}$ appears on both the LHS and RHS of the equation).
-Similar relations exist for a given UV completion of each operator. The details and application of this procedure to ATLAS results can be found in Ref.~\cite{Aad:2015zva} for a range of operators. Knowledge of the UV completion for a given is necessary for this procedure; this introduces a model-dependence that was not present in the not-truncated EFT results. 
+Similar relations exist for a given UV completion of each operator. The details and application of this procedure to 
+ATLAS results can be found in Ref.~\cite{Aad:2015zva} for a range of operators.
+We reiterate: knowledge of the UV completion for a given
+EFT operator was necessary for this procedure;
+this introduces a model-dependence that was not present
+in the non-truncated EFT results. 
 
 %CD: Tim's reasoning is below. 
 %You argued (well, reported on an argument) that the use of the EFT somehow is a barrier to collider searches being appreciated by colleagues who work on other detection strategies.  Of course, I do not know what the future will hold under any scenario, but I strongly believe that the rejection of the collider bounds is based entirely on politics by the direct detection community, who feels threatened that it weakens their designs to expand to lower mass.  Of course, so far they are getting funding to do that anyway, so they should not feel threatened, but they do not want the competition.
@@ -132,41 +162,78 @@ Similar relations exist for a given UV completion of each operator. The details 
 %Since this method uses the physical couplings and energy scale $\Qtr$, it gives the strongest possible constraints in the EFT limit while remaining robust by ensuring the validity of the EFT approximation.
 %TODO: Too strong of a statement? CD: more like - this does not parse. Removed.
 
-\clearpage
+Currently, simplified models are available for comparison with
+the data, and since knowledge of the simplified models is needed,
+there is no reason to apply this prescription.   Instead, the
+simplified model limit for large \Mstar can be presented for
+interpretation in terms of EFT operators.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{EFT truncation using the center of mass energy}
 \label{sec:TruncationWithSHat}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In Ref.\cite{Racco:2015dxa} a procedure to extract model independent and consistent bounds within the EFT is described. This procedure can be applied to any effective Lagrangian describing the interactions between the DM and the SM, and provides limits that can be directly reinterpreted in any completion of the EFT.
+The procedure presented in the previous section was predicated on
+some knowledge of the simplified model.  This led to the identification
+of the mass of the DM pair as the relevant kinematic quantity to use
+in a truncation procedure.
+In general, if no assumption is made about the underlying dynamics,
+it is more conservative to place a limit on the total center
+of mass energy $E_\text{cm}$ of the DM production process.
+Furthermore, the direct connection between the mass scale of
+the EFT validity, \Mcut, and the
 
-The range of applicability of the EFT is defined by a mass scale \Mcut, a parameter which marks the upper limit of the range of energy scales at which the EFT can be used reliably, independently of the particular completion of the model. 
-Regardless of the  details of the full theory, the energy scale for which the EFT is a good approximation is less than the center-of-mass energy $E_\text{cm}$, the total invariant mass of the hard final states of the reaction.%removed "or equal to"
-
-%To be specific, consider the basic mono-jet process with kinematics
-%$p_1 + p_2 \to k + p_{\bar\chiDM\chiDM}$: $k$ is the momentum of the outgoing jet, whereas $p_{\bar\chiDM\chiDM}$ is the momentum of the $\bar\chiDM\chiDM$ pair and
-%$p_{\bar\chiDM\chiDM}=\Qtr$.  $E_\text{cm}^2 = (p_1+p_2)^2 > \Qtr^2$.
-
-The condition ensuring that the EFT approximation is appropriate is, by definition of \Mcut,
+mass scale that normalizes the EFT operator, \Mstar, is unknown.
+For such cases,~Refs.\cite{Racco:2015dxa,Berlin:2014cfa} proposed
+a procedure to extract model independent and consistent bounds within the EFT
+that can be applied to any effective Lagrangian describing the interactions between the DM and the SM.
+This procedure provides conservative limits that can be directly reinterpreted in any completion of the EFT.
+The condition ensuring that the EFT approximation is appropriate is:
 
 \begin{equation}
 \label{Ecm<Mcut}
 E_\text{cm}<M_\text{cut}\,.
 \end{equation}
 
-For example, in the specific case of a tree level mediation with a single mediator, \Mcut can be interpreted as the mass of that mediator.
+%% For example, in the specific case of a tree level mediation with a single mediator, \Mcut can be interpreted as the mass of that mediator.
 
-There are then at least three free parameters describing an EFT:~ 
-the DM mass $m_\text{DM}$, the scale $\Mstar$ of the interaction, and the scale \Mcut.
+%% There are then at least three free parameters describing an EFT:~ 
+%% the DM mass $m_\text{DM}$, the scale $\Mstar$ of the interaction, and the scale \Mcut.
 
-We can use the same technique as above to restrict the signal to the events for which $E_\text{cm}<M_\text{cut}$,  using only these events to derive the exclusion limits on $\Mstar$ as a function of  $(m_\text{DM},M_{\rm cut})$. 
+%% We can use the same technique as above to restrict the signal to the events for which $E_\text{cm}<M_\text{cut}$,  using only these events to derive the exclusion limits on $\Mstar$ as a function of  $(m_\text{DM},M_{\rm cut})$. 
 %
-We can also define an \textit{effective coupling strength} $\Mcut=\gstar \, \Mstar\,,$ where \gstar is a free parameter that substitutes the parameter \Mcut, and therefore derive exclusions on \Mstar as a function of $(\mDM,\gstar)$. This allows us to see how much of the theoretically allowed parameter space has been actually tested and how much is still unexplored; For example, in the \Zprime-type model considered above, \gstar is equal to $\sqrt{\gDM\gq}$.
+The relationship between \Mcut and \Mstar can be parameterized
+by an \textit{effective coupling strength} \gstar, such that
+$\Mcut=\gstar \, \Mstar\,.$
+A scan over values of \gstar provides an indication of the
+sensitivity of the prediction to the truncation procedure.
+In the \Zprime-type model considered above, \gstar is equal to $\sqrt{\gDM\gq}$.
 %
 The resulting plots are shown in \cite{Racco:2015dxa} for a particular effective operator. 
 
 The advantage of this procedure is that the obtained bounds can be directly and easily recast in any  completion of the EFT, by computing the parameters \Mstar, \Mcut in the full model as functions of the parameters of the complete theory. On the other hand, the resulting limits will be weaker than those obtained using \Qtr and a specific UV completion.
+
+\subsection{Comments on unitarity considerations}
+\Todo{Waiting for input from J. Alcaraz}
+
+A further consideration applicable to EFT operators at hadron colliders
+is the potential violation of unitarity.  An analysis of the operator
+$\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
+provides the limit:
+
+\be
+\Mstar > \sqrt{s} \sqrt{ {\sqrt{3} \over 4 \pi} \beta(s) },
+\ee
+where $\sqrt{s}$ is (maximally) the collider energy and $\beta(s)$ is
+the DM velocity \cite{Shoemaker:2011vi}.
+Constraints for other operators have also been derived \cite{Endo:2014mja}.
+This constraint on \Mstar still is open to interpretation, since the
+relation to \Mcut is not resolved, except for a specific simplified model.
+
+\subsection{Consideration for shape analyses}
+
+If a search is not simply a counting experiment and exploits the shapes of kinematic distributions, any of the two conditions on the momentum transfer should be applied on the benchmarks using generator level information, by discarding events that are invalid, and the limit derived from
+the truncated shape must be recalculated. This provides the necessary rescaling of the cross section while keeping the information on the change in the kinematic distributions due to the removal of the invalid events. 
 
 \subsection{Sample results of EFT truncation procedures} 
 An example of the application of the two procedures to the limit on $M_*$ from Ref.~\cite{ATL-PHYS-PUB-2014-007} as a function of the product of the couplings is shown in Figure~\ref{Ecm<Mcut}. Only the region between the dashed and the solid line is excluded. It can be seen that the procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat}, shown in blue, is more conservative than the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr}.
@@ -179,70 +246,68 @@ An example of the application of the two procedures to the limit on $M_*$ from R
 	\label{fig:monojet_MstarMmed}
 \end{figure}
 
-\subsection{Considerations for shape-based searches}
+A further consideration applicable to EFT operators at hadron colliders
+is the potential violation of unitarity.   An analysis of the operator
+$\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
+provides the limit:
 
-If a search is not simply a counting experiment and exploits the shapes of kinematic distributions, any of the two conditions on the momentum transfer should be applied on the benchmarks using generator level information, by discarding events that are invalid. This provides the necessary rescaling of the cross section while keeping the information on the change in the kinematic distributions due to the removal of the invalid events. 
+\be
+\Mstar > \sqrt{s} \sqrt{ {\sqrt{3} \over 4 \pi} \beta(s) },
+\ee
+where $\sqrt{s}$ is (maximally) the collider energy and $\beta(s)$ is
+the DM velocity \cite{Shoemaker:2011vi}.
+Constraints for other operators have also been derived \cite{Endo:2014mja}.
+This constraint on \Mstar still is open to interpretation, since the
+relation to \Mcut is not resolved, except for a specific simplified model.
 
-%An example of a kinematic distribution where the momentum transfer condition is applied event by event is shown in Fig.~\ref{}.
-%
-%\begin{figure}
-%	\centering
-%	\includegraphics[width=0.75\textwidth]{figures/EFT/MstarvsCouplingSel600_DM_EFT_D5_DM50}
-%	\caption{95\% CL lower limits on the scale of the interaction of the D5 operator at 14~\tev, after the two truncation procedures. 
-%		The procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat} is shown in blue, while the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr} is shown in red. Only the region between the dashed and the solid lines is excluded.}
-%	\label{fig:monojet_MstarMmed}
-%\end{figure}
-
-
-%CD: I have given up on this now that Blois has started and Juan is there
-%\section{Comments on Unitarity Considerations}
-%\todo{Waiting for comments from J. Alcaraz}
 
 \section{Recommendation for presentation of EFT results} %change this title
 \label{sec:RecommendationEFTResults}
 
-In this report we recommend two strategies for the presentation of collider results
+In this report,
+we make two recommendations for the presentation of collider results
 in terms of Effective Field Theories for the upcoming Run-2 searches. 
-A full discussion of the presentation of collider results in relation to other experiment
+A full discussion of the presentation of
+collider results in relation to other experiments
 is left to work beyond this Forum, where ATLAS, CMS, the theory community
-and the Direct and Indirect Detection communities are involved. 
+and the Direct and Indirect Detection communities are to be involved. 
 
 We divide the EFT operators in two categories: 
-those which can be mapped to one or more UV-complete simplified models, such as those
+those that can be mapped to one or more UV-complete simplified models, such as those
 commonly used in LHC searches so far and detailed in~\cite{Goodman:2010ku}, and those
-for which no UV completion is available, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}. 
-The EFT is supposed to cover the cases where the mediating particles are heavy,
-thus overlapping with the simplified models outlined in this report.
-Results for this first class of operators can be recast starting from simplified models with high mediator masses, 
-therefore removing the need to explicitly simulate EFT events but still effectively providing experimental limits
-for those operators. For the second class of models, a truncation procedure 
-should be applied for various hypotheses on the goodness of the EFT approximation, 
-and the truncated results presented alongside the full EFT results.
+for which no UV completion is available, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}.
+%% The For the first case, the EFT is supposed to cover the cases where the mediating particles are heavy,
+%% thus overlapping with the simplified models outlined in this report.
+%% Results for this first class of operators can be recast starting from simplified models with high mediator masses, 
+%% therefore removing the need to explicitly simulate EFT events but still effectively providing experimental limits
+%% for those operators. For the second class of models, a truncation procedure 
+%% should be applied for various hypotheses on the goodness of the EFT approximation, 
+%% and the truncated results presented alongside the full EFT results.
 
 \subsection{EFT benchmarks with corresponding simplified models}
+\label{sub:EFT_withSimp}
+%% \begin{figure}
+%% \centering
+%% \includegraphics[width=0.9\textwidth]{figures/monojet/lambda_14TeV_SR1.eps}
+%% \caption{Comparison of the 95\% CL lower limits on the scale of the interaction of a \Zprime-like simplified model at 14~\tev, in terms of the mediator mass. Corresponding limits from EFT models are shown on the same plot as green dashed lines to show equivalence between the two models for high mediator masses.
+%% Taken from Ref.\,\cite{ATL-PHYS-PUB-2014-007}.}
+%% \label{fig:monojet_MstarMmed}
+%% \end{figure}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.95\textwidth]{figures/monojet/lambda_14TeV_SR1.eps}
-\caption{Comparison of the 95\% CL lower limits on the scale of the interaction of a \Zprime-like simplified model at 14~\tev, in terms of the mediator mass. Corresponding limits from EFT models are shown on the same plot as green dashed lines to show equivalence between the two models for high mediator masses.
-Taken from Ref.\,\cite{ATL-PHYS-PUB-2014-007}.}
-\label{fig:monojet_MstarMmed}
-\end{figure}
-
-If a simplified model can be mapped to a given EFT, then the model's high-mediator-mass limit 
-will converge to the EFT. This can be seen in Fig.~\ref{fig:monojet_MstarMmed}, where the limits on 
-the scale of the interaction for a vector mediator exchanged in the \schannel are presented in terms of the mediator 
-mass~\footnote{This plot only serves to exemplify the convergence of the simplified model to a contact
-	interaction operator: before this report, ATLAS and CMS searches presented search results up to very high couplings
-	and therefore large widths, potentially probing unphysical corners of phase space} and compared to the vector contact operator
-(D5 in the notation of Ref.~\cite{Goodman:2010ku}).
-It can be seen that the limits at high mediator mass for this model are equivalent to those of the corresponding contact interaction operator. 
-
-To fully reproduce the kinematics of a contact interaction and have no remaining dependence on the presence of a resonance
+If a simplified model can be mapped to a given EFT, then the model's high-mediator-mass limit  will converge to the EFT.
+%% This can be seen in Fig.~\ref{fig:monojet_MstarMmed}, where the limits on 
+%% the scale of the interaction for a vector mediator exchanged in the \schannel are presented in terms of the mediator 
+%% mass~\footnote{This plot only serves to exemplify the convergence of the simplified model to a contact
+%% 	interaction operator: before this report, ATLAS and CMS searches presented search results up to very high couplings
+%% 	and therefore large widths, potentially probing unphysical corners of phase space}. 
+%% It can be seen that the limits at high mediator mass for this model are equivalent to those of the corresponding EFT benchmark.
+Numerically, for 14 TeV studies, we have
+determined that to fully reproduce the kinematics of a contact
+interaction and have no remaining dependence on the presence of a resonance
 that is as narrow as the choice made in Section~\ref{sub:parameter_scan_monojet} (\gq = 0.25 and \gDM = 1),
 the mediator mass needs to be at least 10 TeV. A comparison of the main kinematic variables for the \schannel vector 
 mediator model with a width of 0.1\mMed \footnote{The use of a fixed width rather than the minimal width is exclusive of these plots} 
-is shown in Fig.~\ref{fig:EFT_kinematics} to the D5 operators is shown in Fig.~\ref{fig:EFT_kinematics}.
+is shown in Fig.~\ref{fig:EFT_kinematics}.
 
 %CD: do we want to add more of the discussion here on why this happens? I would personally keep it short.
 
@@ -251,7 +316,7 @@ is shown in Fig.~\ref{fig:EFT_kinematics} to the D5 operators is shown in Fig.~\
 	\subfloat[\MET{}]{
 		\includegraphics[width=0.7\linewidth]{figures/EFT/TruthETmiss_compEFTvsZprime_DM150_narrow.eps}
 	}
-	\caption{Comparison of the kinematic distributions between a narrow \schannel mediator and the
+	\caption{Comparison of the kinematic distributions at 14~\tev between a narrow \schannel mediator and the
 	corresponding D5 contact operator, at generator level for a jet+\MET{} signature. 
 	\label{fig:EFT_kinematics}}
 \end{figure}
@@ -306,13 +371,11 @@ both in the simplified model and in the EFT case. This can be seen in Fig.~\ref{
 \vskip20pt
 	
 Based on these studies, the Forum recommends experimental collaborations to deliver 
-results for mediators with a mass of 10 TeV instead of pure EFT results for each of the DM masses 
+results for mediators with a mass of 10 TeV instead of fully simulated EFT results for each of the DM masses 
 considered in the scan, and leave further reinterpretation to theorists.
 It should be checked that the high-mass mediator case for the simplified model is correctly implemented 
-in the generator chosen (see Appendix \pageref{thought:heavynarrowmediators}).
 We therefore advise to add one grid scan point at very high mediator mass (10 \tev) to the scan, 
 for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. 
-%The mediator mass that we advise to use for this purpose reinterpretation is 10 TeV, 
 %The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. 
 
 \Todo{The extrapolation to other couplings and mediator masses can be
@@ -320,27 +383,25 @@ for each of the DM masses for the simplified models described in Section~\ref{su
 
 \subsection{EFT benchmarks with no corresponding simplified models}
 
-Three proposals for the treatment of EFT have been stated so far,
-to complement raw EFT results: if the UV completion of the contact operator is known, 
-one can (1) truncate using \Qtr, (2) truncate and iterate using \Qtr, as explained in Section~\ref{sec:TruncationWithSHat}; 
-alternatively one can
-(3) truncate using \Ecm as in Section~\ref{sec:TruncationWithSHat}.  The reliability of the EFT approximation can
-also be quantified by presenting the sensitivity of the results to \Reft, the fraction of events
-that satisfy $\hat{s} > \Mcut ^2$, for example.
+%% Three proposals for the treatment of EFT have been stated so far,
+%% to complement raw EFT results: (1) truncate using \Qtr, (2) truncate and iterate using \Qtr, and
+%% (3) truncate using \Ecm.  The reliability of the EFT approximation can
+%% also be quantified by presenting the sensitivity of the results to \Reft, the fraction of events
+%% that satisfy $\hat{s} > \Mcut ^2$, for example.
 
-Whenever a UV completion is not available, EFT results can still
-be a source of useful information as 
+Whenever a UV completion is not available, EFT results are still
+a source of useful information as 
 described in Section~\ref{sub:validityEWContact}. 
-However, we can only naively control how well the EFT approximation holds.
+However, we can only roughly control how well the EFT approximation holds.
 Despite the fact that a propagator was introduced to motivate
-the truncation procedure for \schannel models, the prescription
+the truncation procedure for \schannel models, the prescription from Sec.~\ref{sub:EFT_withSimp}
 depends upon the simplified model to derive the
 energy scaling that is used for the comparison with the momentum transfer. 
 The simple fact remains that the effective
 coupling of the operator -- $g/\Lambda^n$ -- should not allow
 momentum flow $Q>\Lambda$ or $g>4\pi$.  Given our ignorance of
 the actual kinematics, 
-the truncation procedure suggested for this purpose
+the truncation procedure recommended for this purpose
 is the one described in Section~\ref{sec:TruncationWithSHat},
 as it is independent from any UV completion details. 
 
@@ -360,7 +421,7 @@ exclusion limits for the chosen acceptance.
 We propose a rough scan over \Mcut, such that we find the values of \Mcut 
 for which \Reft ranges from 0.1 to 1. The analysis can then perform a scan over 
 several values of \Mcut, and show the truncated limit 
-for each one of them alongside the naive limit corresponding to $\Reft=1$. 
+for each one of them alongside the naive limit corresponding to \Reft=1. 
 
 %When \Reft=0, there is no limit. When \Reft reaches 1, the truncated limit 
 %is identical to the original limit. (<== These last two sentences may be overkill. 
