Edits from Benjamin
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@318 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2225,6 +2225,40 @@
 	SLACcitation   = "%%CITATION = ARXIV:1103.0621;%%",
 }
 
+  @article{Christensen:2009jx,
+
+author         = "Christensen, Neil D. and de Aquino, Priscila and
+
+Degrande, Celine and Duhr, Claude and Fuks, Benjamin and
+
+others",
+
+title          = "{A Comprehensive approach to new physics simulations}",
+
+journal        = "Eur.Phys.J.",
+
+volume         = "C71",
+
+pages          = "1541",
+
+doi            = "10.1140/epjc/s10052-011-1541-5",
+
+year           = "2011",
+
+eprint         = "0906.2474",
+
+archivePrefix  = "arXiv",
+
+primaryClass   = "hep-ph",
+
+reportNumber   = "CP3-09-24, HD-THEP-09-11, IPHC-PHENO-09-01,
+
+MSUHEP-090612, NIKHEF-2009-009",
+
+SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
+
+}
+
 
 @Article{Alloul:2013bka,
 	author        = "Adam Alloul and Neil D. Christensen and Celine Degrande and Claude Duhr and Benjamin Fuks",
