--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -66,7 +66,7 @@
 \newcommand{\etc}{{\it etc.}}
 \newcommand{\ie}{{\it i.e.}}
 \newcommand{\eg}{{\it e.g.}}
-\newcommand{\lag}{{\cal L}} 
+\newcommand{\lag}{{\ensuremath{\cal L}}} 
 \newcommand{\gmu}{\gamma^\mu}
 \newcommand{\feynrules}{{\namecaps{FeynRules}}\xspace}
 \newcommand{\madgraph}{{\textsc{MadGraph5\_aMC@NLO}}\xspace}
